[gd_scene load_steps=11 format=2]

[ext_resource path="res://Scenes/Maps/Map1.tscn" type="PackedScene" id=1]
[ext_resource path="res://Scenes/MainScenes/GameScene.gd" type="Script" id=4]
[ext_resource path="res://Scenes/MainScenes/UI.gd" type="Script" id=6]
[ext_resource path="res://Assets/Icons/pause.png" type="Texture" id=7]
[ext_resource path="res://Assets/Icons/right.png" type="Texture" id=8]
[ext_resource path="res://Assets/Icons/fastForward.png" type="Texture" id=9]
[ext_resource path="res://Assets/UI/HPbar.jpg" type="Texture" id=10]
[ext_resource path="res://Resources/Fonts/kfn_30_o1.tres" type="DynamicFont" id=11]
[ext_resource path="res://Resources/Fonts/kfn_50_o1.tres" type="DynamicFont" id=12]
[ext_resource path="res://Assets/Icons/home.png" type="Texture" id=13]

[node name="GameScene" type="Node2D"]
script = ExtResource( 4 )

[node name="Map1" parent="." instance=ExtResource( 1 )]

[node name="UI" type="CanvasLayer" parent="."]
script = ExtResource( 6 )

[node name="HUD" type="Control" parent="UI"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -1.0
margin_right = -1.0
mouse_filter = 2

[node name="PopupMenu" type="PopupMenu" parent="UI/HUD"]
margin_left = 1.0
margin_right = 21.0
margin_bottom = 20.0
submenu_popup_delay = 0.2

[node name="GameControls" type="HBoxContainer" parent="UI/HUD"]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -164.0
margin_top = -90.0
margin_right = -20.0
margin_bottom = -20.0

[node name="PausePlay" type="TextureButton" parent="UI/HUD/GameControls"]
pause_mode = 2
margin_right = 70.0
margin_bottom = 70.0
rect_min_size = Vector2( 70, 70 )
size_flags_horizontal = 4
size_flags_vertical = 4
toggle_mode = true
texture_normal = ExtResource( 8 )
texture_pressed = ExtResource( 7 )
expand = true

[node name="SpeedUp" type="TextureButton" parent="UI/HUD/GameControls"]
margin_left = 74.0
margin_right = 144.0
margin_bottom = 70.0
rect_min_size = Vector2( 70, 70 )
size_flags_horizontal = 4
size_flags_vertical = 4
texture_normal = ExtResource( 9 )
expand = true

[node name="InfoBar" type="ColorRect" parent="UI/HUD"]
anchor_right = 1.0
rect_min_size = Vector2( 0, 60 )
color = Color( 1, 1, 1, 0 )

[node name="H" type="HBoxContainer" parent="UI/HUD/InfoBar"]
anchor_right = 1.0
margin_top = 720.0
margin_right = -248.0
margin_bottom = 780.0

[node name="Symbol" type="Label" parent="UI/HUD/InfoBar/H"]
margin_right = 120.0
margin_bottom = 60.0
rect_min_size = Vector2( 120, 60 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 0.705882 )
custom_fonts/font = ExtResource( 12 )
text = "$"
align = 2
valign = 1

[node name="Money" type="Label" parent="UI/HUD/InfoBar/H"]
margin_left = 124.0
margin_right = 234.0
margin_bottom = 60.0
rect_min_size = Vector2( 110, 60 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 0.705882 )
custom_fonts/font = ExtResource( 11 )
text = "100"
align = 2
valign = 1

[node name="Icon" type="TextureRect" parent="UI/HUD/InfoBar/H"]
margin_left = 238.0
margin_right = 298.0
margin_bottom = 60.0
rect_min_size = Vector2( 60, 60 )
size_flags_horizontal = 0
texture = ExtResource( 13 )
expand = true

[node name="HP" type="TextureProgress" parent="UI/HUD/InfoBar/H"]
margin_left = 302.0
margin_top = 15.0
margin_right = 702.0
margin_bottom = 45.0
rect_min_size = Vector2( 400, 30 )
size_flags_vertical = 4
value = 100.0
texture_under = ExtResource( 10 )
texture_progress = ExtResource( 10 )
tint_under = Color( 0.215686, 0.215686, 0.215686, 1 )
tint_progress = Color( 0.305882, 1, 0.0823529, 1 )
nine_patch_stretch = true

[node name="Tween" type="Tween" parent="UI/HUD/InfoBar/H/HP"]

[node name="Control" type="Control" parent="UI/HUD/InfoBar/H"]
margin_left = 706.0
margin_right = 776.0
margin_bottom = 60.0
rect_min_size = Vector2( 70, 0 )

[connection signal="id_pressed" from="UI/HUD/PopupMenu" to="." method="_on_PopupMenu_id_pressed"]
[connection signal="pressed" from="UI/HUD/GameControls/PausePlay" to="UI" method="_on_PausePlay_pressed"]
[connection signal="pressed" from="UI/HUD/GameControls/SpeedUp" to="UI" method="_on_SpeedUp_pressed"]
